I correctd ou fixed some bugs